@@ -1,19 +1,11 @@
-QMAKE_MACOSX_DEPLOYMENT_TARGET = 10.6
-
-# Pointing to include and lib dirs
-!isEmpty(ROXEE_DEPENDENCIES_DIR){
-    QMAKE_LFLAGS += -F$${ROXEE_DEPENDENCIES_DIR}/Sparkle1.5b6
-    INCLUDEPATH += $${ROXEE_DEPENDENCIES_DIR}/Sparkle1.5b6/Sparkle.framework/Headers
-}
-
 !isEmpty(ADDITIONAL_DEPENDENCIES_DIR){
     QMAKE_LFLAGS += -F$${ADDITIONAL_DEPENDENCIES_DIR}
     INCLUDEPATH += $${ADDITIONAL_DEPENDENCIES_DIR}/Sparkle.framework/Headers
 }
 
-
-
+# Pointing to third-party include and lib dirs, in case the external dep doesn't provide them
+QMAKE_LFLAGS += -F$${PWD}/../third-party/Sparkle
+INCLUDEPATH += $${PWD}/../third-party/Sparkle/Sparkle.framework/Headers
 
 LIBS += -framework Sparkle
 LIBS += -framework AppKit
-LIBS += -framework Cocoa
