@@ -1,1 +1,1 @@
-# Untested under linux for now
+# You shouldn't even link against that on linux, do you?
