@@ -1,1 +1,0 @@
-# Right now, libtorrent itself doesn't compile with ming, so this is useless
