@@ -35,6 +35,11 @@ const QString Root::getRevision(){
     return VERSION_GIT;
 }
 
+const QString Root::getChangeset(){
+    Q_WS_MAC
+    return VERSION_CHANGE;
+}
+
 const QString Root::getBuildType(){
     return PROJECT_BUILDTYPE;
 }
@@ -43,10 +48,17 @@ const QString Root::getLinkType(){
     return PROJECT_LINKTYPE;
 }
 
-const QString Root::getChangeset(){
-    return VERSION_CHANGE;
-}
+//const QString Root::getHost(){
+//    return PROJECT_HOST;
+//}
 
+//const QString Root::getCompiler(){
+//    return PROJECT_COMPILER;
+//}
+
+const QString Root::getQt(){
+    return QT_VERSION_STR;
+}
 
 const QString Root::getLibName(){
 #ifdef Q_OS_MAC
