@@ -1,11 +1,17 @@
 ROXEE_PROJECT_NAME = RoxeeMegaUp
 ROXEE_VENDOR_NAME = WebItUp
 ROXEE_PROJECT_VERSION_MAJOR = 0
-ROXEE_PROJECT_VERSION_MINOR = 4
+ROXEE_PROJECT_VERSION_MINOR = 5
 ROXEE_PROJECT_VERSION_BUGFIX = 0
-ROXEE_DESTDIR =
+
+# Where to find additional dependencies (eg: external (win)-sparkle)
+# This will take precedence over the provided third-party builds
 ADDITIONAL_DEPENDENCIES_DIR =
-ROXEE_DEPENDENCIES_DIR = $$PWD/third-party
+# Where to output the final build
+ROXEE_DESTDIR =
+# Wether to build static, shared, or plugin
 #ROXEE_LINK_TYPE = static
+#ROXEE_LINK_TYPE = plugin
 ROXEE_LINK_TYPE = dynamic
+
 TARGET = roxeemegaup
